
Firedbird Plugin: Added triggers node for each table to display triggers.

LAF Plugin: Added substance look and feel as an option.

MySQL Plugin: 
 - Added support for handling stored procedure create statements.
 - Added source tab for Stored Procedures, Triggers and Views.  Triggers are 
   displayed as object nodes beneath tables as is done in other plugins.

Oracle Plugin: 
 - (Feature Request 1735530: Hide Oracle Bin$.....==$0 tables ) 
 	Added configuration for removing the Recycle Bin tables from the object tree.
 - Show the source for Oracle tables, as well as materialized views.  
 - Added additional query tokenization pass to find begin...end;/ type 
   anonymous procedures.
   
PostgreSQL Plugin:
 - Added database locks display tab for PostgreSQL sessions.  Click on the top 
 node in the object tree and look for a "Locks" tab.  Code was adapted from Rocco
 Rutte's tab of the same name and purpose in the EclipseSQL project.

Refactoring Plugin: Refactored drop tables command to not use the event dispatch
thread for calculating foreign keys(UI Responsiveness).  Also, now FKs in child 
tables are dropped before any parent tables are dropped when cascade 
constraints is selected.

SQLScripts Plugin: Now uses types generated by Hibernate dialects for create
table script feature.  Also, it now uses the session query tokenizer.  

Sybase Plugin: Added new trigger and index nodes beneath tables in the tree.  
Also, added trigger source tab for triggers.

Patch 1761706 (Miscellaneous Java 5 Generics) submitted by Bron Eubanks

Task 138098 (Plugins Session Menu Items (Disable)) When using a session that 
  is not supported by a db-specific plugin, that plugin should disable it's 
  Session menu items

Task 137959 (Refactor PreferencesManager) removed redundant plugin class 
  definitions related to Preferences which were very similar.

- Added unload button to plugin summary dialog which will cause the selected 
  plugin to be unloaded.
  